--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ Optimization of Microchannel Heat Sink Shapes to Enhancing Electronic Cooling Ef
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">bishnubbk143@gmail.com</a></p>
+	            <p><a href="mailto:info@yoursite.com">bishnubishwakarma.official@gmail.com</a></p>
 	          </div>
           </div>
           
