--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ Optimization of Microchannel Heat Sink Shapes to Enhancing Electronic Cooling Ef
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p><a href="address">Kapilvastu, Nepal</a></p>
+	            <p><a href="address">Kapilvastu Municipality - 07, Nepal</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 justify-content-center ftco-animate">
