--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ Optimization of Microchannel Heat Sink Shapes to Enhancing Electronic Cooling Ef
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">9867903517
+	            <p><a href="tel://9867903517">9867903517
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 justify-content-center ftco-animate">
@@ -603,7 +603,7 @@ Optimization of Microchannel Heat Sink Shapes to Enhancing Electronic Cooling Ef
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">bishnubishwakarma.official@gmail.com</a></p>
+	            <p><a href="mailto:bishnubishwakarma.official@gmail.com">bishnubishwakarma.official@gmail.com</a></p>
 	          </div>
           </div>
           
